<resources>
    <string name="app_name">Local Hero</string>
    <string name="next">Weiter</string>
    <string name="slide1_title">Sei der Held Deiner Nachbarschaft!</string>
    <string name="slide1_explanation">Mit LocalHero siehst Du Anfragen oder Angebote in Deiner Umgebung.</string>
    <string name="slide1_slogan">Hilf anderen und auch Dir wird geholfen!</string>
    <string name="slide2_title">Anfragenablauf</string>
    <string name="slide2_accept">Nimm Anfragen an und tausch Dich mit dem Hilfesuchenden aus.</string>
    <string name="slide2_karma">Wenn Du fertig bist wird Dir der Anfragensteller Karma geben.</string>
    <string name="slide2_hero">Sammle Karma und werde zum Held der Nachbarschaft!</string>
    <string name="slide3_title">Standort festlegen</string>
    <string name="slide3_explanation">Bitte gib Deinen Wohnort und Deine Straße ein. Deine genaue Adresse wird anderen erst angezeigt, wenn sie einen Auftrag von Dir annehmen.</string>
    <string name="slide3_street_number">Straße und Hausnummer</string>
    <string name="slide4_title">Fast geschafft</string>
    <string name="slide4_explanation">Damit andere in der App wissen, wem sie den Auftrag erfüllen musst Du hier einem Namen angeben. Dieser wird anderen erst gezeigt, wenn sie einen Auftrag von Dir annehmen.</string>
    <string name="action_settings">Einstellungen</string>
    <string name="add_title">Titel</string>
    <string name="add_discription">Beschreibung</string>
    <string name="action_askforhelp">Anfragen</string>
    <string name="action_offerhelp">Angebote</string>
    <string name="action_myprofile">Profil</string>
    <string name="successes">Erfolge</string>
    <string name="asks_created">Anfragen erstellt</string>
    <string name="asks_done">Anfragen erfüllt</string>
    <string name="offers_created">Angebote erstellt</string>
    <string name="offers_done">Angebote ausgeführt</string>
    <string name="category">Kategorie</string>
    <string name="spinner_title">Wähle eine Kategorie</string>
    <string name="send">Senden</string>
    <string name="name">Name</string>
    <string name="address">Adresse</string>
    <string name="city">Stadt</string>
    <string name="street">Straße und Hausnummer</string>
    <string name="radius">Ich helfe im Umkreis von</string>
    <string name="date">Datum</string>
    <string name="agent">Bearbeiter</string>
    <string name="owner">Ersteller</string>
    <string name="empty">Leider gibt es nichts Neues in Deiner Umgebung. Erstelle einen Vorgang!</string>
    <string name="chatpartner">Chatpartner</string>
    <string name="save">Speichern</string>
    <string name="delete">Löschen</string>
    <string name="edit_profile">Profil bearbeiten</string>
    <string name="hint_for_address">Die Adresse des Erstellers wird Dir erst angezeigt wenn Du den Vorgang angenommen hast.</string>
    <string name="hint_for_address_mine">Die Adresse des Bearbeiters wird Dir erst angezeigt wenn jemand Deinen Vorgang angenommen hat.</string>
    <string name="username_hint">Der Name des Erstellers wird Dir erst angezeigt, wenn Du den Vorgang annimmst.</string>
    <string name="not_available">Nicht verfügbar</string>
    <string name="give_karma">Karma vergeben</string>
    <string name="accept">Annehmen</string>
    <string name="reset_accept">Abgeben</string>
    <string name="reset_agent">Zurücksetzen</string>
    <string name="show_details">Details anzeigen</string>
    <string name="hide_details">Details ausblenden</string>
    <string name="ask_was_deleted">Anfrage gelöscht</string>
    <string name="offer_was_deleted">Angebot wurde gelöscht</string>
    <string name="karma_was_credited">100 Karma wurde vergeben!</string>
    <string name="message_is_too_short">Die Nachricht ist zu kurz.</string>
    <string name="you">Du</string>
    <string name="no_agent_yet">Noch niemand hat den Vorgang angenommen. Schnapp\' ihn dir!</string>
    <string name="no_agent_yet_mine">Leider hat noch niemand Deinen Vorgang angenommen.</string>
    <string name="delete_message">Bist Du Dir wirklich sicher, dass du diesen Vorgang löschen willst?</string>
    <string name="delete_title">Anfrage löschen</string>
    <string name="cancel">Abbrechen</string>
    <string name="your_home">Dein Zuhause</string>
    <string name="create_ask">Anfrage erstellen</string>
    <string name="create_offer">Angebot erstellen</string>
    <string name="filter">Filtern</string>
    <string name="i_help">Ich helfe</string>
    <string name="own">Meins</string>
    <string name="message_prompt">Nimm\' Kontakt auf!</string>
    <string name="karma_award_title">Karma vergeben?</string>
    <string name="karma_award_message">Wenn Du Karma vergibst, ist dieser Vorgang erledigt und wird gelöscht.</string>
    <string name="reset_message">Wenn Du den Bearbeiter zurücksetzt, ist die Anfrage wieder offen für andere User.</string>
    <string name="reset_title">Bearbeiter zurücksetzen?</string>
    <string name="reset_title_agent">Wirklich abgeben?</string>
    <string name="reset_message_agent">Wenn Du diesen Vorgang abgibst ist er wieder offen für andere User.</string>
    <string name="fill_in">Bitte fülle alle Felder aus.</string>
    <string name="address_error">Diese Adresse konnte leider nicht gefunden werden.</string>
    <string name="notification_offer">hat dein Angebot angenommen!</string>
    <string name="notification_ask">hat deine Anfrage angenommen!</string>
    <string name="notification_message">Neue Nachricht</string>
    <string name="meter">Meter</string>
    <string name="loading">Lädt...</string>

    <string-array name="suggestions">
        <item>Meine</item>
        <item>Angenommene</item>
        <item>Einkaufen</item>
        <item>Kochen</item>
        <item>Waschen</item>
        <item>Putzen</item>
        <item>Transport</item>
        <item>Gartenarbeit</item>
        <item>Installation</item>
        <item>Reparatur</item>
        <item>Sonstiges</item>
    </string-array>
    <string-array name="image_comparison">
        <item>Meine</item>
        <item>Angenommene</item>
        <item>Einkaufen</item>
        <item>Kochen</item>
        <item>Waschen</item>
        <item>Putzen</item>
        <item>Transport</item>
        <item>Gartenarbeit</item>
        <item>Installation</item>
        <item>Reparatur</item>
        <item>Sonstiges</item>
    </string-array>
</resources>
